NWDAF/MLflow/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: fatemehshafieiardestani/my-fastapi-mlflow-app:latest
        ports:
        - containerPort: 5000
        - containerPort: 8000
        - containerPort: 5001
        volumeMounts:
        - name: mlflow-artifacts
          mountPath: /mlflow_artifacts
      volumes:
      - name: mlflow-artifacts
        persistentVolumeClaim:
          claimName: mlflow-pvc
