NWDAF/MLflow/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
  namespace: open5gs
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
